@@ -1,5 +1,6 @@
 # For sadko
-) Add KLogd, SysLogd and  RemoteSysLogIP variables (Need add in webui).
+) Add KLogd, SysLogd and  RemoteSysLogIP variables (Need add in webui system log page).
+) Add RemoteManagementPort variable for set goahead port(default 80)(Need add in webui misc page).
 ) Need add disconnect selected STA in AP mode (WebUI)
 iwpriv ra0 set DisConnectSta=MAC
 iwpriv ra0 set DisConnectAllSta=1
@@ -8,7 +9,6 @@ iwpriv ra0 set DisConnectAllSta=1
 
 
 # For me
-) add portselect for goahead
 ) goahead need bind only lan_if if managment in only lan mode
 #need fix
 ) Add skb reuse support.
