@@ -47,23 +47,23 @@ start() {
 	fi
 	if [ "$RemoteManagement" != "0" ]; then
 	    $LOG "web limit"
-    	    iptables -A servicelimit -p tcp --dport 80 $CONNLIMIT 16 -j REJECT
+    	    iptables -A servicelimit -p tcp --dport $RemoteManagementPort $CONNLIMIT 16 -j REJECT
 	    if [ "$RemoteManagement" = "1" ]; then
 		if [ "$OperationMode" != "0" ]; then
-    		    iptables -A servicelimit -i $wan_if $STATE_NEW -p tcp --dport 80 -j DROP
+    		    iptables -A servicelimit -i $wan_if $STATE_NEW -p tcp --dport $RemoteManagementPort -j DROP
 		    if [ "$vpnEnabled" = "on" ] && [ "$vpnType" != "6" ]; then
-    			iptables -A servicelimit -i ppp+ $STATE_NEW -p tcp --dport 80 -j DROP
+    			iptables -A servicelimit -i ppp+ $STATE_NEW -p tcp --dport $RemoteManagementPort -j DROP
 		    fi
 		fi
-    		iptables -A servicelimit -i $lan_if $STATE_NEW -p tcp --dport 80 -j ACCEPT
+    		iptables -A servicelimit -i $lan_if $STATE_NEW -p tcp --dport $RemoteManagementPort -j ACCEPT
 	     if [ "$Lan2Enabled" = "1" ]; then
-    		iptables -A servicelimit -i $lan2_if $STATE_NEW -p tcp --dport 80 -j ACCEPT
+    		iptables -A servicelimit -i $lan2_if $STATE_NEW -p tcp --dport $RemoteManagementPort -j ACCEPT
 	     fi
 	    elif [ "$RemoteManagement" = "2" ]; then
-    		iptables -A servicelimit $STATE_NEW -p tcp --dport 80 -j ACCEPT
+    		iptables -A servicelimit $STATE_NEW -p tcp --dport $RemoteManagementPort -j ACCEPT
 	    fi
 	else
-    	    iptables -A servicelimit $STATE_NEW -p tcp --dport 80 -j DROP
+    	    iptables -A servicelimit $STATE_NEW -p tcp --dport $RemoteManagementPort -j DROP
 	fi
 	if [ "$RemoteSSH" != "0" ]; then
 	    $LOG "ssh limit"
@@ -427,11 +427,11 @@ stop() {
 
 get_param() {
     # get network, vpn, netfiletrs and others config variables
-    eval `nvram_buf_get 2860 lan_ipaddr lan_netmask Lan2Enabled lan2_ipaddr lan2_netmask use_snat \
-	    vpnType vpnNAT vpnPurePPPOE natEnabled PortForwardEnable DMZEnable DMZIPAddress DMZNATLoopback \
-	    DefaultFirewallPolicy IPPortFilterEnable WANPingFilter RemoteSSH RemoteFTP RemoteTelnet RemoteManagement dhcpEnabled \
-	    ipt_account upnpEnabled igmpEnabled UDPXYMode UDPXYPort SmbEnabled TransmissionEnabled snmpd chilli_net simple_qos \
-	    parproutedEnabled l2tp_srv_enabled PrinterSrvEnabled`
+    eval `nvram_buf_get 2860 lan_ipaddr lan_netmask Lan2Enabled lan2_ipaddr lan2_netmask \
+	    natEnabled use_snat PortForwardEnable DMZEnable DMZIPAddress DMZNATLoopback DefaultFirewallPolicy \
+	    IPPortFilterEnable WANPingFilter RemoteSSH RemoteFTP RemoteTelnet RemoteManagement RemoteManagementPort \
+	    dhcpEnabled ipt_account upnpEnabled igmpEnabled UDPXYMode UDPXYPort SmbEnabled TransmissionEnabled snmpd \
+	    parproutedEnabled PrinterSrvEnabled chilli_net simple_qos vpnType vpnNAT vpnPurePPPOE l2tp_srv_enabled `
 
     # if wan ip not get
     if [ "$wan_ipaddr" = "" ]; then
